# embassy-fc

./: Cargo.toml  index.html
.cargo/: config.toml
src/: main.rs
