[package]
edition = "2021"
name = "embassy-stm32f2-examples"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
# Change stm32f207zg to your chip name, if necessary.
embassy-stm32 = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy", features = [ "defmt", "stm32h7s3l8", "unstable-pac", "memory-x", "time-driver-any", "exti"]  }
embassy-sync = { version = "0.6.2", git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
embassy-executor = { version = "0.7.0", git = "https://github.com/embassy-rs/embassy", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-embedded-hal = {version = "0.3.0", git = "https://github.com/embassy-rs/embassy"}
embassy-futures = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy"}
embedded-hal-1 = { package = "embedded-hal", version = "1.0" }

# My local repositories
# fxas2100 = {git = "https://github.com/prioritize/fxas2100.git"}
fxas2100 = {path = "../fxas2100"}

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
#embedded-hal = "0.2.6"
embedded-hal-async  = {version = "1.0.0"}

panic-probe = { version = "0.3", features = ["print-defmt"] }
heapless = { version = "0.8", default-features = false }
nb = "1.0.0"
static_cell = "2"

[profile.release]
debug = 2
